test/expressions/noinit/recordHasComplicatedRecordField.good
recordHasComplicatedRecordField.chpl:10: error: noinit is only supported for arrays
